Version 0.1.275 - 25 September 2009

- add support for 0x10de:0x06ec (G98M [GeForce G 105M]) which only
  works with nv (#54000)
- add quite a lot of new nvidia cards definition from NV_WHQL.inf from
  windows driver 186.82)
- remove quite a lot of usb devices descriptions that came from usb.ids

Version 0.1.274 - 23 September 2009

- radeonhd failed on 0x1002:0x9480 (#53183)

Version 0.1.273 - 23 September 2009

- dc2xx is now obsoleted by userspace
- drop obsolete 'cs46xx', 'cs5535', 'maestro', 'maestro3', & 'ymfpci'
  entries

Version 0.1.272 - 23 September 2009

- kill all 0x10ec:0x8139:*:* entries (ldetect now try to choose
  bettwen "8139cp" & "8139too" according to PCI revision like
  performed by the kernel) (#53349)

Version 0.1.271 - 22 September 2009

- auerswald, hp5300, hpusbscsi, rio500 & tiglusb are obsoleted by
  userspace
- fix obsoleted drivers:
  o CDCEther => cdc_ether
  o hci_usb => btusb
  o mtouchusb => usbtouchscreen
  o ov518_decomp => gspca_ov519
  o phidgetservo => hid
  o touchkitusb => usbtouchscreen

Version 0.1.270 - 22 September 2009

- fix obsoleted drivers:
  o b2c2_usb => b2c2-flexcop-usb
  o cy82c693 => pata_cypress
  o dtc => initio
  o generic => ata_generic and ide-pci-generic
  o maestro3 => snd_maestro3
  o snd_gina3g => snd-echo3g
  o sonypi => i2c-piix4
  o sonicvibes => snd-sonicvibes

Version 0.1.269 - 22 September 2009

- add new ATI ids from fglrx
- mod_quicikame doesn't exist anymore (#52176)
- tag one more "nVidia Geforce2 MX/MX" as GeForce 3 so that it can
  uses 3D (#53841)

Version 0.1.268 - 18 September 2009

- fix 2 Matrox entries
- Monitor DB
  o sync with latest Fedora (new Dell monitors)

Version 0.1.267 - 18 September 2009

- add support for the last missing from Matrox card
- fix invalid Horzsync for 6 'Generic CRT Display; Monitor' and a
  couple Acer & Philips monitors (#48063)
- use fglrx again with ATI Mobility Radeon HD 3400 (now working)

Version 0.1.266 - 15 September 2009
